# dioxus-topcoder

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dictionary.db  sqlite3.exp  sqlite3.lib
assets/: cards-table-panel.css  history-bar.css  main.css  quiz.css  workaround.js  working-panel.css
src/: lib.rs  main.rs  server.rs  tests.rs  translate.rs
src/components/: app.rs  history.rs  mod.rs  working_panel.rs
src/components/cards_panel/: cards_panel.rs  draggable_card.rs  draggable_card_with_component.rs  mod.rs
src/components/mode_node_screen/: mod.rs  mode_node.rs
src/components/quiz/: quiz.rs
src/components/tests/: mod.rs
src/components/working_panel/: mod.rs  working_panel.rs
src/quiz_service/: mod.rs  quiz_service.rs
src/tests/: README.md
src/translate/: language_codes.rs  mod.rs  translate.rs
src/translate/tests/: language_codes_tests.rs  mod.rs  translate_from_db_tests.rs
tests/: language_codes_tests.rs  quiz.rs  translate_tests.rs
