[package]
name = "learn-dioxus"
version = "0.1.0"
authors = ["Oleksandr <n0naimatall@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"], optional = true}
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
#dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["router", "fullstack"]}
reqwest = { version = "0.12.12", features = ["json"] }
rusqlite = { version = "0.37.0" }
serde_json = "1.0.134"
strum = "0.27.1"
tokio = "1.42.0"
strum_macros = "0.27.1"
dioxus-time = "0.1.0-alpha.1"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:axum"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

